data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2072.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\01\7f\00\60\00\01\7f\02\94\80\80\80\00\01\03\65"
    "\6e\76\0c\66\61\69\6c\69\6e\67\5f\66\75\6e\63\00"
    "\00\03\82\80\80\80\00\01\01\0a\96\80\80\80\00\01"
    "\90\80\80\80\00\00\41\00\04\7f\41\01\10\00\41\01"
    "\05\41\00\0b\0b"
  )
""
)